# A workspace for mitch's sketches!

[workspace]
members = [
    "aquatic-juice",
    "delicate-umbrella",
    "logo",
    "rainy-grandfather",
    "sloppy-roof",
    "soft-watch",
    "uppity-parcel",
]

[replace]
"vulkano:0.11.1" = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }

[profile.release]
debug = true
